[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ItemDisplaySelectionIcon.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Inventory/ItemSelectArrowSmall.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Inventory/ItemSelectArrow.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Bob"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowLeft:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 0, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowRight:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 4 ), Vector2( 10, 4 ), Vector2( 11, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArrowUp:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 1 ), Vector2( 11, 0 ), Vector2( 11, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ArrowDown:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 9 ), Vector2( 11, 10 ), Vector2( 11, 9 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowLeft:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowRight:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArrowUp:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ArrowDown:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 10 ) ]
}

[node name="ItemSelectionIndicator" type="Node2D"]
z_index = 1000
script = ExtResource( 1 )

[node name="Icon" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -2.5
margin_right = 8.0
margin_bottom = 12.5
rect_min_size = Vector2( 6, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="TextureRect" parent="Icon"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -3.5
margin_right = 4.0
margin_bottom = 3.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRight" type="TextureRect" parent="Icon"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -3.5
margin_right = 4.76837e-06
margin_bottom = 3.5
texture = ExtResource( 2 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowUp" type="TextureRect" parent="Icon"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 3.5
margin_top = 1.0
margin_right = 8.5
margin_bottom = 8.0
rect_rotation = 90.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDown" type="TextureRect" parent="Icon"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 3.5
margin_top = -6.0
margin_right = 8.5
margin_bottom = 1.00008
rect_rotation = 90.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Icon"]
autoplay = "Bob"
anims/Bob = SubResource( 1 )
anims/Idle = SubResource( 2 )
